force-app/main/default/objects/Patient_Signature_Event__e/Patient_Signature_Event__e.object-meta.xml
<CustomObject>
    <label>Patient Signature Event</label>
    <pluralLabel>Patient Signature Events</pluralLabel>
</CustomObject>