force-app/main/default/objects/Patient_Signature_Event__e/fields/base64string__c.field-meta.xml
<CustomField>
    <fullName>base64string__c</fullName>
    <label>base64string</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>