force-app/main/default/objects/Patient_Signature_Event__e/fields/SenderEmail__c.field-meta.xml
<CustomField>
    <fullName>SenderEmail__c</fullName>
    <label>SenderEmail</label>
    <length>40</length>
    <type>Text</type>
</CustomField>